# test-watchingwhileusleep-tochka-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: c70c25bf0350_add_users_image_task_and_image_.py
app/: conftest.py  main.py  models.py  schemas.py  tasks.py
app/config/: base_settings.py  celery_settings.py  db_settings.py  minio_settings.py
app/services/: auth.py  image.py
app/services/tests/: test_image.py
app/views/: auth.py  image.py
app/views/tests/: test_auth.py  test_image.py
